<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textStyle="bold"
        tools:text="Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="5"
        android:ellipsize="end"
        tools:text="@tools:sample/lorem/random"/>

    <TextView
        android:id="@+id/tv_description_see_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#2196F3"
        android:text="See more"/>

    <View
        android:id="@+id/div_see_more_info"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/tv_description_see_more"/>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Info"
        app:layout_constraintTop_toBottomOf="@+id/div_see_more_info"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/detail_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/detail_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_status"/>

            <TextView
                android:id="@+id/tv_platform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/detail_platform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_genre"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/tv_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/detail_publisher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/detail_developer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_publisher"/>

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/detail_release_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_developer"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/div_info_min_sys_req"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/ll_row"/>

    <TextView
        android:id="@+id/tv_min_sys_req"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Minimum System Requirements"
        app:layout_constraintTop_toBottomOf="@+id/div_info_min_sys_req"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_os"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/detail_os"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_sys_req"/>

    <TextView
        android:id="@+id/tv_processor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/detail_processor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_os"/>

    <TextView
        android:id="@+id/tv_memory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/detail_memory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_processor"/>

    <TextView
        android:id="@+id/tv_graphics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/detail_graphics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_memory"/>

    <TextView
        android:id="@+id/tv_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/detail_storage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_graphics"/>


</androidx.constraintlayout.widget.ConstraintLayout>